# waldo-parser

./: Cargo.toml
src/: lib.rs  main.rs  parse.rs  resolve.rs
tests/wit/: bar.wit  foo.wit  foobar.wit
tests/wld/: valid.wld
